; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_group_free.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_group_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifgroup = type { %struct.cifgroup*, %struct.cifgroup* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cifgroup*)* @group_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @group_free(%struct.cifgroup* %0) #0 {
  %2 = alloca %struct.cifgroup*, align 8
  store %struct.cifgroup* %0, %struct.cifgroup** %2, align 8
  %3 = load %struct.cifgroup*, %struct.cifgroup** %2, align 8
  %4 = getelementptr inbounds %struct.cifgroup, %struct.cifgroup* %3, i32 0, i32 1
  %5 = load %struct.cifgroup*, %struct.cifgroup** %4, align 8
  %6 = call i32 @heap_free(%struct.cifgroup* %5)
  %7 = load %struct.cifgroup*, %struct.cifgroup** %2, align 8
  %8 = getelementptr inbounds %struct.cifgroup, %struct.cifgroup* %7, i32 0, i32 0
  %9 = load %struct.cifgroup*, %struct.cifgroup** %8, align 8
  %10 = call i32 @heap_free(%struct.cifgroup* %9)
  %11 = load %struct.cifgroup*, %struct.cifgroup** %2, align 8
  %12 = call i32 @heap_free(%struct.cifgroup* %11)
  ret void
}

declare dso_local i32 @heap_free(%struct.cifgroup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
